--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-
+    <div class="content">
+        <!-- canvas va permitir hacer los dibujos -->
+        <canvas id="canvas"></canvas>
+        <div class="colors">
+            <button class="btn color1" id="color1"></button>
+            <button class="btn color2" id="color2"></button>
+            <button class="btn color3" id="color3"></button>
+            <button class="btn color4" id="color4"></button>
+            <button class="btn color5" id="color5"></button>
+        </div>
+    </div>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
 </body>
 
