--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,11 +15,14 @@
         <!-- canvas va permitir hacer los dibujos -->
         <canvas id="canvas"></canvas>
         <div class="colors">
-            <button class="btn color1" id="color1"></button>
-            <button class="btn color2" id="color2"></button>
-            <button class="btn color3" id="color3"></button>
-            <button class="btn color4" id="color4"></button>
-            <button class="btn color5" id="color5"></button>
+            <button class="btn color1" onclick="change_color('red')"></button>
+            <button class="btn color2" onclick="change_color('yellowgreen')"></button>
+            <button class="btn color3" onclick="change_color('blue')"></button>
+            <button class="btn color4" onclick="change_color('yellow')"></button>
+            <button class="btn color5" onclick="change_color('black')"></button>
+        </div> 
+        <div class="delete">
+            <button id="btn_delete" onclick="delete_all()">X</button>
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
