--- a/src/public/index.html
+++ b/src/public/index.html
@@ -24,6 +24,9 @@
         <div class="delete">
             <button id="btn_delete" onclick="delete_all()">X</button>
         </div>
+        <div id="users">
+            Número de usuarios conectados: 0
+        </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
